feat(graph): introduce display options for graph and list components - Added GraphDisplayOptions and ListDisplayOptions interfaces for managing display settings. - Updated components to utilize new display options, enhancing customization. - Modified styles and HTML structure for improved visual representation.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<app-root class="bg-black"></app-root>
+<app-root class="bg-surface-900"></app-root>
 </body>
 </html>
