--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>ModpackGraph</title>
+  <meta charset="UTF-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>ModpackGraph</title>
+  <style>
+    html {
+      background-color: #000;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
 <div id="app"></div>
