feat(app): implement directory selection dialog and theme toggle - Added OpenDirectoryDialog function to facilitate directory selection - Updated app component to include theme toggle functionality - Refactored app template for improved layout and structure

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark-theme" style="height: 100vh; max-height: 100vh;">
+<html lang="en" style="height: 100vh; max-height: 100vh;">
 <head>
   <meta charset="utf-8">
   <title>Modpack Dependency Graph Generator</title>
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<app-root class="bg-surface-900"></app-root>
+<app-root></app-root>
 </body>
 </html>
